force-app/main/default/objects/vlocity_cmt__VlocityDataPack__c/fields/vlocity_cmt__ActivationStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ActivationStatus__c</fullName>
    <label>Activation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>