force-app/main/default/objects/vlocity_cmt__VlocityDataPack__c/fields/vlocity_cmt__AsyncApexJobType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AsyncApexJobType__c</fullName>
    <label>Async Apex Job Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>