force-app/main/default/objects/vlocity_cmt__VlocityDataPack__c/fields/vlocity_cmt__LastProcessedDateTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__LastProcessedDateTime__c</fullName>
    <label>LastProcessedDateTime</label>
    <type>DateTime</type>
</CustomField>