force-app/main/default/objects/vlocity_cmt__VlocityDataPack__c/fields/vlocity_cmt__Source__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>