force-app/main/default/objects/vlocity_cmt__VlocityDataPack__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_cmt__Version__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>vlocity_cmt__Type__c</columns>
    <columns>vlocity_cmt__Source__c</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>vlocity_cmt__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>